# AoC-2022

./: 1.hs  1.txt  10.hs  11.hs  11secondAttempt.hs  12.hs  13.hs  14.hs  14.py  14.txt  14out.txt  14out1.txt  15.py  15.txt  2.hs  3.hs  4.hs  4.txt  4test.txt  5.hs  5.txt  5test.txt  6.hs  7.hs  8.hs  9.hs  readme.md  template.hs
Helmut/: Cargo.toml  readme.md
Helmut/1/: solve.hs  solve.rs  solve2.hs
Helmut/10/: solve.jl
Helmut/11/: Day 11 - Advent of Code 2022.html  a.jl  readme.md  solve.hs  solve.jl
Helmut/12/: input1.txt  solve.hs  solve.jl
Helmut/13/: input1.txt  small.txt  solve.hs
Helmut/14/: solve.hs  solve.jl
Helmut/15/: solve.jl
Helmut/16/: brute.jl  graph.dot  notes.tex  small.ampl  small.data  small.dot  solve.jl  solve2.jl  ventil.py
Helmut/17/: solve.jl  tetris.hs  tetris.jl  tetris.py
Helmut/18/: Graph.nb  bad.hs  graph  solve.hs  solve.jl  solve.py
Helmut/19/: data.ampl  goal.ampl  job.ampl  job1.ampl  mini.ampl  mm.txt  muster.jl  muster.txt  readme.md  small.ampl  solve.hs  solve.jl  solve.py  solve2.jl  solve2.py
Helmut/2/: solve.hs  solve.py  solve.rs  solve2.py
Helmut/20/: solve.hs  solve.jl  solve2.jl
Helmut/21/: input.txt  input2.txt  readme.md
Helmut/22/: small.txt  solve.jl
Helmut/23/: log.txt  solve.jl  solve.py
Helmut/24/: solve.py  solve2.py  tiny2.txt
Helmut/25/: solve.hs  solve.py
Helmut/3/: solve.hs  solve.rs  solve2.hs
Helmut/4/: solve.hs  solve.rs
Helmut/5/: solve.hs  solve.py  solve.rs  solve2.py
Helmut/6/: solve.hs  solve.py
Helmut/7/: solve.jl  solve.py
Helmut/8/: solve.hs  solve.jl
(+4 files in other folders)
